Add navigation bar and styles

--- a/project5.html
+++ b/project5.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
@@ -126,6 +127,15 @@
     </style>
 </head>
 <body>
+<nav class="navbar">
+  <a href="index.html">Home</a>
+  <a href="project1.html">Project 1</a>
+  <a href="project2.html">Project 2</a>
+  <a href="project3.html">Project 3</a>
+  <a href="project4.html">Project 4</a>
+  <a href="project5.html">Project 5</a>
+  <a href="project6.html">Project 6</a>
+</nav>
     <h1>Project 5: Fun With Diffusion Models!</h1>
     <h2>Alp Eren Ozdarendeli</h2>
 
