--- a/project2.html
+++ b/project2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: Fun with Filters and Frequencies!</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -85,6 +86,15 @@
     </style>
 </head>
 <body>
+<nav class="navbar">
+  <a href="index.html">Home</a>
+  <a href="project1.html">Project 1</a>
+  <a href="project2.html">Project 2</a>
+  <a href="project3.html">Project 3</a>
+  <a href="project4.html">Project 4</a>
+  <a href="project5.html">Project 5</a>
+  <a href="project6.html">Project 6</a>
+</nav>
     <h1>Project 2: Fun with Filters and Frequencies!</h1>
     <h2>Alp Eren Ozdarendeli</h2>
 
