Add footer with home link to project pages and shared styling

--- a/project2.html
+++ b/project2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: Fun with Filters and Frequencies!</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -500,6 +501,9 @@
         </div>
         </div>
         <div class="clear-float"></div>
+<footer class="footer">
+    <a href="index.html" class="footer-link">Back to Home</a>
+</footer>
     </div>
 </body>
 </html>
