--- a/project6.html
+++ b/project6.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
@@ -352,3 +353,8 @@
         </div>
         </div>
         <div class="clear-float"></div>
+<footer class="footer">
+    <a href="index.html" class="footer-link">Back to Home</a>
+</footer>
+</body>
+</html>
