--- a/project1.html
+++ b/project1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1: Images of the Russian Empire -- Colorizing the Prokudin-Gorskii Photo Collection</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -144,6 +145,9 @@
             <img src="images/napoleon.jpg" alt="napoleon.jpg (my choosing from collection) - gshift: [64, 4] rshift: [132, -2]">
             <p class="image-description"><i>napoleon.jpg</i> (my choosing from collection) gshift: [64, 4] rshift: [132, -2]</p>
         </div>
+<footer class="footer">
+    <a href="index.html" class="footer-link">Back to Home</a>
+</footer>
     </div>
 </body>
 </html>
