--- a/project3.html
+++ b/project3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 3: Face Morphing</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
@@ -284,6 +285,9 @@
         </div>
         </div>
         <div class="clear-float"></div>
+<footer class="footer">
+    <a href="index.html" class="footer-link">Back to Home</a>
+</footer>
     </div>
 </body>
 </html>
