Add global stylesheet with new font and colors

--- a/project1.html
+++ b/project1.html
@@ -6,20 +6,20 @@
     <title>Project 1: Images of the Russian Empire -- Colorizing the Prokudin-Gorskii Photo Collection</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Open Sans', Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 20px;
             max-width: 1200px;
             margin: 0 auto;
-            background-color: #f4f4f4;
+            background-color: #fafafa;
             color: #333;
         }
         h1, h2 {
-            color: #2c3e50;
+            color: #003366;
         }
         h1 {
-            border-bottom: 2px solid #2c3e50;
+            border-bottom: 2px solid #003366;
             padding-bottom: 10px;
         }
         .project-overview {
@@ -52,6 +52,7 @@
             color: #555;
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Project 1: Images of the Russian Empire -- Colorizing the Prokudin-Gorskii Photo Collection</h1>
