--- a/project6.html
+++ b/project6.html
@@ -11,20 +11,20 @@
     </script>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Open Sans', Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 20px;
             max-width: 1200px;
             margin: 0 auto;
-            background-color: #f4f4f4;
+            background-color: #fafafa;
             color: #333;
         }
         h1, h2 {
-            color: #2c3e50;
+            color: #003366;
         }
         h1 {
-            border-bottom: 2px solid #2c3e50;
+            border-bottom: 2px solid #003366;
             padding-bottom: 10px;
         }
         .project-overview {
@@ -124,6 +124,7 @@
             overflow-x: auto;
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Final Project: NeRF</h1>
