--- a/project1.html
+++ b/project1.html
@@ -77,71 +77,71 @@
     <h2>Images</h2>
     <div class="image-grid">
         <div class="image-container">
-            <img src="images/cathedral_output.jpg" alt="cathedral.jpg - gshift: [5, 2] rshift: [12, 3]">
+            <img src="images/cathedral_output.jpg" alt="cathedral gshift: [5, 2] rshift: [12, 3]">
             <p class="image-description"><i>cathedral.jpg</i> gshift: [5, 2] rshift: [12, 3]</p>
         </div>
         <div class="image-container">
-            <img src="images/monastery_output.jpg" alt="monastery.jpg - gshift: [-3, 2] rshift: [3, 2]">
+            <img src="images/monastery_output.jpg" alt="monastery gshift: [-3, 2] rshift: [3, 2]">
             <p class="image-description"><i>monastery.jpg</i> gshift: [-3, 2] rshift: [3, 2]</p>
         </div>
         <div class="image-container">
-            <img src="images/tobolsk_output.jpg" alt="tobolsk.jpg - gshift: [3, 2] rshift: [6, 3]">
+            <img src="images/tobolsk_output.jpg" alt="tobolsk gshift: [3, 2] rshift: [6, 3]">
             <p class="image-description"><i>tobolsk.jpg</i> gshift: [3, 2] rshift: [6, 3]</p>
         </div>
         <div class="image-container">
-            <img src="images/icon_output.jpg" alt="icon.jpg - gshift: [40, 16] rshift: [90, 22]">
+            <img src="images/icon_output.jpg" alt="icon gshift: [40, 16] rshift: [90, 22]">
             <p class="image-description"><i>icon.jpg</i> gshift: [40, 16] rshift: [90, 22]</p>
         </div>
         <div class="image-container">
-            <img src="images/harvesters_output.jpg" alt="harvesters.jpg - gshift: [59, 15] rshift: [124, 12]">
+            <img src="images/harvesters_output.jpg" alt="harvesters gshift: [59, 15] rshift: [124, 12]">
             <p class="image-description"><i>harvesters.jpg</i> gshift: [59, 15] rshift: [124, 12]</p>
         </div>
         <div class="image-container">
-            <img src="images/emir_output.jpg" alt="emir_output.jpg - gshift: [49, 22] rshift: [106, 40]">
+            <img src="images/emir_output.jpg" alt="emir gshift: [49, 22] rshift: [106, 40]">
             <p class="image-description"><i>emir.jpg</i> gshift: [49, 22] rshift: [106, 40]</p>
         </div>
         <div class="image-container">
-            <img src="images/church_output.jpg" alt="church_output.jpg - gshift: [24, -6] rshift: [55, -7]">
+            <img src="images/church_output.jpg" alt="church gshift: [24, -6] rshift: [55, -7]">
             <p class="image-description"><i>church.jpg</i> gshift: [24, -6] rshift: [55, -7]</p>
         </div>
         <div class="image-container">
-            <img src="images/lady_output.jpg" alt="lady_output.jpg - gshift: [56, 6] rshift: [115, 11]">
+            <img src="images/lady_output.jpg" alt="lady gshift: [56, 6] rshift: [115, 11]">
             <p class="image-description"><i>lady.jpg</i> gshift: [56, 6] rshift: [115, 11]</p>
         </div>
         <div class="image-container">
-            <img src="images/melons_output.jpg" alt="melons_output.jpg - gshift: [81, 9] rshift: [178, 12]">
+            <img src="images/melons_output.jpg" alt="melons gshift: [81, 9] rshift: [178, 12]">
             <p class="image-description"><i>melons.jpg</i> gshift: [81, 9] rshift: [178, 12]</p>
         </div>
         <div class="image-container">
-            <img src="images/onion_church_output.jpg" alt="onion_church_output.jpg - gshift: [52, 24] rshift: [108, 35]">
+            <img src="images/onion_church_output.jpg" alt="onion_church gshift: [52, 24] rshift: [108, 35]">
             <p class="image-description"><i>onion_church.jpg</i> gshift: [52, 24] rshift: [108, 35]</p>
         </div>
         <div class="image-container">
-            <img src="images/sculpture_output.jpg" alt="sculpture_output.jpg - gshift: [33, -12] rshift: [140, -27]">
+            <img src="images/sculpture_output.jpg" alt="sculpture gshift: [33, -12] rshift: [140, -27]">
             <p class="image-description"><i>sculpture.jpg</i> gshift: [33, -12] rshift: [140, -27]</p>
         </div>
         <div class="image-container">
-            <img src="images/self_portrait_output.jpg" alt="self_portrait_output.jpg - gshift: [78, 28] rshift: [176, 36]">
+            <img src="images/self_portrait_output.jpg" alt="self_portrait gshift: [78, 28] rshift: [176, 36]">
             <p class="image-description"><i>self_portrait.jpg</i> gshift: [78, 28] rshift: [176, 36]</p>
         </div>
         <div class="image-container">
-            <img src="images/three_generations_output.jpg" alt="three_generations_output.jpg - gshift: [53, 14]rshift: [112, 10]">
+            <img src="images/three_generations_output.jpg" alt="three_generations gshift: [53, 14] rshift: [112, 10]">
             <p class="image-description"><i>three_generations.jpg</i> gshift: [53, 14] rshift: [112, 10]</p>
         </div>
         <div class="image-container">
-            <img src="images/train_output.jpg" alt="train_output.jpg - gshift: [42, 0] rshift: [86, 30]">
+            <img src="images/train_output.jpg" alt="train gshift: [42, 0] rshift: [86, 30]">
             <p class="image-description"><i>train.jpg</i> gshift: [42, 0] rshift: [86, 30]</p>
         </div>
         <div class="image-container">
-            <img src="images/religious_portrait.jpg" alt="religious_portrait.jpg (my choosing from collection) - gshift: [29, 4] rshift: [69, 6]">
+            <img src="images/religious_portrait.jpg" alt="religious_portrait (my choosing from collection) gshift: [29, 4] rshift: [69, 6]">
             <p class="image-description"><i>religious_portrait.jpg</i> (my choosing from collection) gshift: [29, 4] rshift: [69, 6]</p>
         </div>
         <div class="image-container">
-            <img src="images/landscape.jpg" alt="landscape.jpg (my choosing from collection) - gshift: [14, 26] rshift: [84, 50]">
+            <img src="images/landscape.jpg" alt="landscape (my choosing from collection) gshift: [14, 26] rshift: [84, 50]">
             <p class="image-description"><i>landscape.jpg</i> (my choosing from collection) gshift: [14, 26] rshift: [84, 50]</p>
         </div>
         <div class="image-container">
-            <img src="images/napoleon.jpg" alt="napoleon.jpg (my choosing from collection) - gshift: [64, 4] rshift: [132, -2]">
+            <img src="images/napoleon.jpg" alt="napoleon (my choosing from collection) gshift: [64, 4] rshift: [132, -2]">
             <p class="image-description"><i>napoleon.jpg</i> (my choosing from collection) gshift: [64, 4] rshift: [132, -2]</p>
         </div>
     </div>
