--- a/project2.html
+++ b/project2.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.svg">
+    <meta name="description" content="Portfolio of Alp Ozdarendeli's computer vision projects.">
+    <meta name="keywords" content="Alp Ozdarendeli, portfolio, computer vision, graphics, image processing, CS projects">
     <title>Project 2: Fun with Filters and Frequencies!</title>
     <style>
         body {
