--- a/project4.html
+++ b/project4.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.svg">
+    <meta name="description" content="Portfolio of Alp Ozdarendeli's computer vision projects.">
+    <meta name="keywords" content="Alp Ozdarendeli, portfolio, computer vision, graphics, image processing, CS projects">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
