Add global navigation bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="project1.html">Project 1</a>
+    <a href="project2.html">Project 2</a>
+    <a href="project3.html">Project 3</a>
+    <a href="project4.html">Project 4</a>
+    <a href="project5.html">Project 5</a>
+    <a href="project6.html">Project 6</a>
+</nav>
     <h1>Welcome to My Portfolio!</h1>
     <a href="project1.html" class="project-link">Project 1: Colorizing the Prokudin-Gorskii Photo Collection</a>
     <a href="project2.html" class="project-link">Project 2: Fun with Filters and Frequencies!</a>
