--- a/project1.html
+++ b/project1.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="project1.html">Project 1</a>
+    <a href="project2.html">Project 2</a>
+    <a href="project3.html">Project 3</a>
+    <a href="project4.html">Project 4</a>
+    <a href="project5.html">Project 5</a>
+    <a href="project6.html">Project 6</a>
+</nav>
     <h1>Project 1: Images of the Russian Empire -- Colorizing the Prokudin-Gorskii Photo Collection</h1>
     <h2>Alp Eren Ozdarendeli</h2>
 
