--- a/project3.html
+++ b/project3.html
@@ -13,6 +13,15 @@
     </script>
 </head>
 <body>
+<nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="project1.html">Project 1</a>
+    <a href="project2.html">Project 2</a>
+    <a href="project3.html">Project 3</a>
+    <a href="project4.html">Project 4</a>
+    <a href="project5.html">Project 5</a>
+    <a href="project6.html">Project 6</a>
+</nav>
     <h1>Project 3: Face Morphing</h1>
     <h2>Alp Eren Ozdarendeli</h2>
 
