Add footer links and styles

--- a/project2.html
+++ b/project2.html
@@ -423,5 +423,8 @@
         </div>
         <div class="clear-float"></div>
     </div>
+<footer>
+    <a href="index.html" class="footer-link">Back to Home</a>
+</footer>
 </body>
 </html>
