--- a/project1.html
+++ b/project1.html
@@ -98,5 +98,8 @@
             <p class="image-description"><i>napoleon.jpg</i> (my choosing from collection) gshift: [64, 4] rshift: [132, -2]</p>
         </div>
     </div>
+<footer>
+    <a href="index.html" class="footer-link">Back to Home</a>
+</footer>
 </body>
 </html>
