--- a/project3.html
+++ b/project3.html
@@ -202,5 +202,8 @@
         </div>
         <div class="clear-float"></div>
     </div>
+<footer>
+    <a href="index.html" class="footer-link">Back to Home</a>
+</footer>
 </body>
 </html>
