--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
     <a href="project6.html">Project 6</a>
 </nav>
     <h1>Welcome to My Portfolio!</h1>
-    <a href="project1.html" class="project-link">Project 1: Colorizing the Prokudin-Gorskii Photo Collection</a>
-    <a href="project2.html" class="project-link">Project 2: Fun with Filters and Frequencies!</a>
-    <a href="project3.html" class="project-link">Project 3: Face Morphing</a>
-    <a href="project4.html" class="project-link">Project 4: Image Warping and Mosaicing</a>
-    <a href="project5.html" class="project-link">Project 5: Fun With Diffusion Models!</a>
-    <a href="project6.html" class="project-link">Final Project: Neural Radiance Field!</a>
+    <div class="projects">
+        <a href="project1.html" class="project-link">Project 1: Colorizing the Prokudin-Gorskii Photo Collection</a>
+        <a href="project2.html" class="project-link">Project 2: Fun with Filters and Frequencies!</a>
+        <a href="project3.html" class="project-link">Project 3: Face Morphing</a>
+        <a href="project4.html" class="project-link">Project 4: Image Warping and Mosaicing</a>
+        <a href="project5.html" class="project-link">Project 5: Fun With Diffusion Models!</a>
+        <a href="project6.html" class="project-link">Final Project: Neural Radiance Field!</a>
+    </div>
 </body>
 </html>
