Highlight active nav links and improve mobile layout

--- a/project1.html
+++ b/project1.html
@@ -9,7 +9,7 @@
 <body>
 <nav class="navbar">
     <a href="index.html">Home</a>
-    <a href="project1.html">Project 1</a>
+    <a href="project1.html" class="active">Project 1</a>
     <a href="project2.html">Project 2</a>
     <a href="project3.html">Project 3</a>
     <a href="project4.html">Project 4</a>
