--- a/project5.html
+++ b/project5.html
@@ -18,7 +18,7 @@
     <a href="project2.html">Project 2</a>
     <a href="project3.html">Project 3</a>
     <a href="project4.html">Project 4</a>
-    <a href="project5.html">Project 5</a>
+    <a href="project5.html" class="active">Project 5</a>
     <a href="project6.html">Project 6</a>
 </nav>
     <h1>Project 5: Fun With Diffusion Models!</h1>
