--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav class="navbar">
-    <a href="index.html">Home</a>
+    <a href="index.html" class="active">Home</a>
     <a href="project1.html">Project 1</a>
     <a href="project2.html">Project 2</a>
     <a href="project3.html">Project 3</a>
