--- a/project2.html
+++ b/project2.html
@@ -10,7 +10,7 @@
 <nav class="navbar">
     <a href="index.html">Home</a>
     <a href="project1.html">Project 1</a>
-    <a href="project2.html">Project 2</a>
+    <a href="project2.html" class="active">Project 2</a>
     <a href="project3.html">Project 3</a>
     <a href="project4.html">Project 4</a>
     <a href="project5.html">Project 5</a>
