--- a/project3.html
+++ b/project3.html
@@ -17,7 +17,7 @@
     <a href="index.html">Home</a>
     <a href="project1.html">Project 1</a>
     <a href="project2.html">Project 2</a>
-    <a href="project3.html">Project 3</a>
+    <a href="project3.html" class="active">Project 3</a>
     <a href="project4.html">Project 4</a>
     <a href="project5.html">Project 5</a>
     <a href="project6.html">Project 6</a>
