--- a/project6.html
+++ b/project6.html
@@ -19,7 +19,7 @@
     <a href="project3.html">Project 3</a>
     <a href="project4.html">Project 4</a>
     <a href="project5.html">Project 5</a>
-    <a href="project6.html">Project 6</a>
+    <a href="project6.html" class="active">Project 6</a>
 </nav>
     <h1>Final Project: NeRF</h1>
     <h2>Alp Eren Ozdarendeli</h2>    
