--- a/project3.html
+++ b/project3.html
@@ -211,5 +211,8 @@
         </div>
         <div class="clear-float"></div>
     </div>
+    <footer>
+        <a href="index.html" class="footer-link">Back to Home</a>
+    </footer>
 </body>
 </html>
