--- a/project6.html
+++ b/project6.html
@@ -247,5 +247,8 @@
         </div>
         </div>
         <div class="clear-float"></div>
+    <footer>
+        <a href="index.html" class="footer-link">Back to Home</a>
+    </footer>
 </body>
 </html>
