Make navbar sticky and add Back to top links

--- a/project6.html
+++ b/project6.html
@@ -247,5 +247,12 @@
         </div>
         </div>
         <div class="clear-float"></div>
+<a href="#" class="back-to-top">Back to top</a>
+<script>
+    document.querySelector(".back-to-top").addEventListener("click", function(e) {
+        e.preventDefault();
+        window.scrollTo({ top: 0, behavior: "smooth" });
+    });
+</script>
 </body>
 </html>
