--- a/project1.html
+++ b/project1.html
@@ -106,6 +106,13 @@
             <img src="images/napoleon.jpg" alt="napoleon (my choosing from collection) gshift: [64, 4] rshift: [132, -2]">
             <p class="image-description"><i>napoleon.jpg</i> (my choosing from collection) gshift: [64, 4] rshift: [132, -2]</p>
         </div>
-    </div>
+</div>
+<a href="#" class="back-to-top">Back to top</a>
+<script>
+    document.querySelector('.back-to-top').addEventListener('click', function(e) {
+        e.preventDefault();
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
+</script>
 </body>
 </html>
