Add hero section with intro

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     <a href="project5.html">Project 5</a>
     <a href="project6.html">Project 6</a>
 </nav>
-    <h1>Welcome to My Portfolio!</h1>
+    <section id="hero">
+        <h1>Welcome to My Portfolio!</h1>
+        <p>Hello! I'm Alp Eren Ozdarendeli, a robotics and machine learning enthusiast. This site highlights some of my favorite computer vision projects.</p>
+        <img src="images/self_portrait_output.jpg" alt="Portrait of Alp Eren Ozdarendeli" class="portrait">
+    </section>
+
     <a href="project1.html" class="project-link">Project 1: Colorizing the Prokudin-Gorskii Photo Collection</a>
     <a href="project2.html" class="project-link">Project 2: Fun with Filters and Frequencies!</a>
     <a href="project3.html" class="project-link">Project 3: Face Morphing</a>
