--- a/project1.html
+++ b/project1.html
@@ -107,5 +107,6 @@
             <p class="image-description"><i>napoleon.jpg</i> (my choosing from collection) gshift: [64, 4] rshift: [132, -2]</p>
         </div>
     </div>
+    <script src="overlay.js"></script>
 </body>
 </html>
