--- a/project6.html
+++ b/project6.html
@@ -247,5 +247,6 @@
         </div>
         </div>
         <div class="clear-float"></div>
+    <script src="overlay.js"></script>
 </body>
 </html>
