--- a/project2.html
+++ b/project2.html
@@ -7,15 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<nav class="navbar">
-    <a href="index.html">Home</a>
-    <a href="project1.html">Project 1</a>
-    <a href="project2.html">Project 2</a>
-    <a href="project3.html">Project 3</a>
-    <a href="project4.html">Project 4</a>
-    <a href="project5.html">Project 5</a>
-    <a href="project6.html">Project 6</a>
-</nav>
+<div id="header"></div>
     <h1>Project 2: Fun with Filters and Frequencies!</h1>
     <h2>Alp Eren Ozdarendeli</h2>
 
@@ -432,5 +424,7 @@
         </div>
         <div class="clear-float"></div>
     </div>
+<div id="footer"></div>
+<script src="includes.js"></script>
 </body>
 </html>
