--- a/project4.html
+++ b/project4.html
@@ -12,15 +12,7 @@
     </script>
 </head>
 <body>
-<nav class="navbar">
-    <a href="index.html">Home</a>
-    <a href="project1.html">Project 1</a>
-    <a href="project2.html">Project 2</a>
-    <a href="project3.html">Project 3</a>
-    <a href="project4.html">Project 4</a>
-    <a href="project5.html">Project 5</a>
-    <a href="project6.html">Project 6</a>
-</nav>
+<div id="header"></div>
     <h1>Project 4: Image Warping and Mosaicing</h1>
     <h2>Alp Eren Ozdarendeli</h2>
 
@@ -292,5 +284,7 @@
         <div class="clear-float"></div>
         <p> I think with automatic stitching, the results were better. I may have done a few slightly inaccurate point correspondences, and this may have affected manual stitching results. The coolest thing I learned while doing the project was implementing the RANSAC algorithm from scratch. Even though I took introduction to machine learning class before, I haven't had the chance to code RANSAC and I think it was cool to learn how to code its iterative consensus algorithm.</p>
     </div>
+<div id="footer"></div>
+<script src="includes.js"></script>
 </body>
 </html>
