Add project thumbnails and card styling

--- a/index.html
+++ b/index.html
@@ -17,11 +17,41 @@
     <a href="project6.html">Project 6</a>
 </nav>
     <h1>Welcome to My Portfolio!</h1>
-    <a href="project1.html" class="project-link">Project 1: Colorizing the Prokudin-Gorskii Photo Collection</a>
-    <a href="project2.html" class="project-link">Project 2: Fun with Filters and Frequencies!</a>
-    <a href="project3.html" class="project-link">Project 3: Face Morphing</a>
-    <a href="project4.html" class="project-link">Project 4: Image Warping and Mosaicing</a>
-    <a href="project5.html" class="project-link">Project 5: Fun With Diffusion Models!</a>
-    <a href="project6.html" class="project-link">Final Project: Neural Radiance Field!</a>
+    <div class="project-card">
+        <a href="project1.html">
+            <img src="images/monastery_output.jpg" alt="Project 1 thumbnail">
+            <div>Project 1: Colorizing the Prokudin-Gorskii Photo Collection</div>
+        </a>
+    </div>
+    <div class="project-card">
+        <a href="project2.html">
+            <img src="proj2images/batman.jpg" alt="Project 2 thumbnail">
+            <div>Project 2: Fun with Filters and Frequencies!</div>
+        </a>
+    </div>
+    <div class="project-card">
+        <a href="project3.html">
+            <img src="proj3images/alp12.jpg" alt="Project 3 thumbnail">
+            <div>Project 3: Face Morphing</div>
+        </a>
+    </div>
+    <div class="project-card">
+        <a href="project4.html">
+            <img src="proj4images/auto1.png" alt="Project 4 thumbnail">
+            <div>Project 4: Image Warping and Mosaicing</div>
+        </a>
+    </div>
+    <div class="project-card">
+        <a href="project5.html">
+            <img src="proj5images/br1.png" alt="Project 5 thumbnail">
+            <div>Project 5: Fun With Diffusion Models!</div>
+        </a>
+    </div>
+    <div class="project-card">
+        <a href="project6.html">
+            <img src="mlp_nerf.png" alt="Project 6 thumbnail">
+            <div>Final Project: Neural Radiance Field!</div>
+        </a>
+    </div>
 </body>
 </html>
