Add dark mode toggle

--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
     <a href="project4.html" class="project-link">Project 4: Image Warping and Mosaicing</a>
     <a href="project5.html" class="project-link">Project 5: Fun With Diffusion Models!</a>
     <a href="project6.html" class="project-link">Final Project: Neural Radiance Field!</a>
+<footer>
+    <button id="theme-toggle">Toggle Dark Mode</button>
+</footer>
+<script src="script.js"></script>
 </body>
 </html>
