--- a/project1.html
+++ b/project1.html
@@ -107,5 +107,9 @@
             <p class="image-description"><i>napoleon.jpg</i> (my choosing from collection) gshift: [64, 4] rshift: [132, -2]</p>
         </div>
     </div>
+<footer>
+    <button id="theme-toggle">Toggle Dark Mode</button>
+</footer>
+<script src="script.js"></script>
 </body>
 </html>
