--- a/project3.html
+++ b/project3.html
@@ -211,5 +211,9 @@
         </div>
         <div class="clear-float"></div>
     </div>
+<footer>
+    <button id="theme-toggle">Toggle Dark Mode</button>
+</footer>
+<script src="script.js"></script>
 </body>
 </html>
