--- a/project4.html
+++ b/project4.html
@@ -292,5 +292,9 @@
         <div class="clear-float"></div>
         <p> I think with automatic stitching, the results were better. I may have done a few slightly inaccurate point correspondences, and this may have affected manual stitching results. The coolest thing I learned while doing the project was implementing the RANSAC algorithm from scratch. Even though I took introduction to machine learning class before, I haven't had the chance to code RANSAC and I think it was cool to learn how to code its iterative consensus algorithm.</p>
     </div>
+<footer>
+    <button id="theme-toggle">Toggle Dark Mode</button>
+</footer>
+<script src="script.js"></script>
 </body>
 </html>
