--- a/project6.html
+++ b/project6.html
@@ -247,5 +247,9 @@
         </div>
         </div>
         <div class="clear-float"></div>
+<footer>
+    <button id="theme-toggle">Toggle Dark Mode</button>
+</footer>
+<script src="script.js"></script>
 </body>
 </html>
