--- a/project2.html
+++ b/project2.html
@@ -432,5 +432,9 @@
         </div>
         <div class="clear-float"></div>
     </div>
+<footer>
+    <button id="theme-toggle">Toggle Dark Mode</button>
+</footer>
+<script src="script.js"></script>
 </body>
 </html>
