--- a/project5.html
+++ b/project5.html
@@ -664,5 +664,9 @@
         </div>
         <div class="clear-float"></div>
 </div>
+<footer>
+    <button id="theme-toggle">Toggle Dark Mode</button>
+</footer>
+<script src="script.js"></script>
 </body>
 </html>
