Make navbar sticky and add back-to-top buttons

--- a/project1.html
+++ b/project1.html
@@ -6,7 +6,7 @@
     <title>Project 1: Images of the Russian Empire -- Colorizing the Prokudin-Gorskii Photo Collection</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="top">
 <nav class="navbar">
     <a href="index.html">Home</a>
     <a href="project1.html" class="active">Project 1</a>
@@ -108,7 +108,9 @@
         </div>
     </div>
     <footer>
+        <a href="#top" class="back-to-top">Back to top</a>
         <a href="index.html" class="footer-link">Back to Home</a>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
