--- a/project2.html
+++ b/project2.html
@@ -6,7 +6,7 @@
     <title>Project 2: Fun with Filters and Frequencies!</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="top">
 <nav class="navbar">
     <a href="index.html">Home</a>
     <a href="project1.html">Project 1</a>
@@ -433,7 +433,9 @@
         <div class="clear-float"></div>
     </div>
     <footer>
+        <a href="#top" class="back-to-top">Back to top</a>
         <a href="index.html" class="footer-link">Back to Home</a>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
