--- a/project6.html
+++ b/project6.html
@@ -11,7 +11,7 @@
         });
     </script>
 </head>
-<body>
+<body id="top">
 <nav class="navbar">
     <a href="index.html">Home</a>
     <a href="project1.html">Project 1</a>
@@ -248,7 +248,9 @@
         </div>
         <div class="clear-float"></div>
     <footer>
+        <a href="#top" class="back-to-top">Back to top</a>
         <a href="index.html" class="footer-link">Back to Home</a>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
