--- a/project3.html
+++ b/project3.html
@@ -12,7 +12,7 @@
         });
     </script>
 </head>
-<body>
+<body id="top">
 <nav class="navbar">
     <a href="index.html">Home</a>
     <a href="project1.html">Project 1</a>
@@ -212,7 +212,9 @@
         <div class="clear-float"></div>
     </div>
     <footer>
+        <a href="#top" class="back-to-top">Back to top</a>
         <a href="index.html" class="footer-link">Back to Home</a>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
