--- a/project4.html
+++ b/project4.html
@@ -11,7 +11,7 @@
         });
     </script>
 </head>
-<body>
+<body id="top">
 <nav class="navbar">
     <a href="index.html">Home</a>
     <a href="project1.html">Project 1</a>
@@ -293,7 +293,9 @@
         <p> I think with automatic stitching, the results were better. I may have done a few slightly inaccurate point correspondences, and this may have affected manual stitching results. The coolest thing I learned while doing the project was implementing the RANSAC algorithm from scratch. Even though I took introduction to machine learning class before, I haven't had the chance to code RANSAC and I think it was cool to learn how to code its iterative consensus algorithm.</p>
     </div>
     <footer>
+        <a href="#top" class="back-to-top">Back to top</a>
         <a href="index.html" class="footer-link">Back to Home</a>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
